src/app/casino/gameview/gameview.component.css
.game-view {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

.aviso h4{
    margin: 40px !important;
}

.game-frame {
    width: 100%;
    margin: 0 auto;
}


.aviso{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column;
}

.opacity50 {
    color: var(--foreground);
    text-align: center;
    opacity: 0.55;
}

a.opacity50:hover {
    opacity: 1;
}

.bonus {
    line-height: 52px;
}

.aviso h4{
    margin: 20px;
}

.acoes{
    width: 100%;
    display: flex;
    justify-content: center;
}

.ver-bonus {
    margin: 20px;
    display: flex !important;
    justify-content: center;
    align-items: center;
    color: var(--header);
    background-color: var(--highlight);
    width: 150px;
    height: 42px;
}

.ver-jogos {
    margin: 20px;
    display: flex !important;
    justify-content: center;
    align-items: center;
    border: var(--highlight);
    color: var(--highlight);
    border-style: solid;
    border-width: 1px;
    width: 150px;
    height: 42px;
}

iframe{
    width: 100%;
    border:none;
}

.header-game-view {
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 8.5px 16px;
    border: 1px solid #1B1B1B;
}

.header-game-view > div {
    flex-grow: 1;
    display: flex;
    align-items: center;
}

.header-game-view .game-name {
    justify-content: left;
}

.header-game-view .buttons-game-view {
    justify-content: right;
}

.game-name span {
    font-weight: 600;
    margin-top: 6px;
    margin-bottom: 0;
}

.provider-container {
    position: relative;
}

.empty-game-list {
    color: var(--foreground-header);
    opacity: 0.5;
}

.game-list {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    -ms-overflow-style: none;
    scrollbar-width: none;
    padding-left: 18px;
    margin-left: -18px;
}

.game-list::-webkit-scrollbar {
    display: none;
}

.game-list-inline {
    flex-wrap: nowrap;
    overflow: scroll;
    scroll-behavior: smooth;
}

.provider-list {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

.provider-list::-webkit-scrollbar {
    display: none;
}

.provider-list-inline {
    flex-wrap: nowrap;
    overflow: scroll;
    scroll-behavior: smooth;
}

.provider-list-inline {
    flex-wrap: nowrap;
    overflow: scroll;
    scroll-behavior: smooth;
}

.more-games-fade {
    position: absolute;
    width: 50px;
    height: calc(100% + 20px);
    top: -10px;
    transition: opacity 0.5s;
}

.more-games-fade-right {
    background-image: linear-gradient(to left, rgba(var(--background-rgb), 1) 25%, rgba(var(--background-rgb), 0.01));
    right: 0;
    opacity: 1;
}

.more-games-fade-left {
    background-image: linear-gradient(to right, rgba(var(--background-rgb), 1) 25%, rgba(var(--background-rgb), 0.01));
    left: 0;
    opacity: 0;
}

.social-buttons-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 90%;
}

.social-buttons{
    width: 24px;
    height: 24px;
    margin-top: 8px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.social-buttons:hover {
    opacity: 0.7;
}

.whatsapp {
    fill: #24CC63;
    margin-left: 0;
    background-color: rgba(36, 204, 99, 0.20);;
    background-image: url('https://wb-assets.com/img/icons/whatsapp.svg');
    background-size: 58%;
    background-repeat: no-repeat;
    background-position: center;
  }

.facebook {
    fill: #395694;
    background-color: rgba(57, 86, 148, 0.20);
    background-image: url('https://wb-assets.com/img/icons/facebook.svg');
    background-size: 36%;
    background-repeat: no-repeat;
    background-position: center;
}

.telegram {
    fill: #2FA3D4;
    background-color: rgba(47, 163, 212, 0.20);;
    background-image: url('https://wb-assets.com/img/icons/telegram.svg');
    background-size: 60%;
    background-repeat: no-repeat;
    background-position: center;
}

.copy {
    fill: #FFF;
    background-color: rgba(255, 255, 255, 0.20);
    background-image: url('https://wb-assets.com/img/icons/copy.svg');
    background-size: 50%;
    background-repeat: no-repeat;
    background-position: center;
    margin-right: 0;
}

.close-modal-continuar-jogando i{
    color: var(--highlight);
    font-size: 24px;
    padding-right: 8px;
}

#expanded-btn-game-opened, #expanded-btn-game-closed, #close-btn-game {
    display: flex;
}

@media only screen and (max-width: 1024px) {
    .game-view {
        z-index: 10000;
    }
}
/* ... */

